<resources>
    <string name="app_name">LoginParseServer</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Register</string>
    <string name="subtiteRegistration">Fill the details to get started</string>
    <string name="subtiteLogin">Login in to continue</string>
    <string name="emailHintText">Email Address</string>
    <string name="usernameHintText">Username</string>
    <string name="passwordHintText">Password</string>
    <string name="confirmPasswordHintText">Confirm Password</string>
    <string name="title">Welcome back!</string>
    <string name="registrationTitle">Let\'s catch up!</string>
    <string name="landingTitle">Hola! Let\'s get started</string>
    <string name="landingUsername">Logged in as</string>
    <string name="greeting">Successfully Signed in</string>
    <string name="logoutTitle">Logout</string>
    <string name="newUser">New here?</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="server_url">https://parseapi.back4app.com/</string>
    <string name="app_id">tcsZxNfzPckKyJrUctTc5dJsixVBEPJs9cxaOGFx</string>
    <string name="client_key">ZyxRZN9pImvvwAzO2BHpSwkIdgJLg2jGRskGqMNA</string>

</resources>