<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/circular_std_black"
        android:text="@string/forgotPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:onClick="onClickForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/title"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/subtiteRegistration"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:text="@string/subtiteLogin" />


    <View
        android:id="@+id/view2"
        android:layout_width="452dp"
        android:layout_height="410dp"
        android:background="@drawable/ic_blob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="266dp"
        android:layout_height="42dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:fontFamily="@font/circular_std_bold"
        android:hint="@string/usernameHintText"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.0"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="266dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:fontFamily="@font/circular_std_bold"
        android:hint="@string/passwordHintText"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="141dp"
        android:layout_height="86dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_blob"
        android:backgroundTint="@color/colorPrimaryLight"
        android:fontFamily="@font/circular_std_bold"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:text="@string/loginButtonText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:onClick="onClickLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/circular_std_black"
        android:text="@string/newUser"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:onClick="onClickRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>